<resources>
    <string name="app_name">Browse Products</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_valid_email">Please enter a valid email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="passwords_donot_match">Password do not match</string>
    <string name="user_not_found">User not found</string>
    <string name="sign_in">Sign In</string>
    <string name="wrong_password">Wrong password</string>
    <string name="vendor">Vendor</string>
    <string name="customer">Customer</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up</string>
    <string name="alert">Alert</string>
    <string name="message">Message</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="logout">Logout</string>
    <string name="these_permissions_are_required">These permissions are required to continue.</string>
    <string name="unable_to_create_image_directory">Unable to create image directory</string>
    <string name="product_name">Product name</string>
    <string name="product_desc">Product description</string>
    <string name="product_price">Product price</string>
    <string name="please_capture_image">Please capture image</string>
    <string name="please_enter_product_name">Please enter product name</string>
    <string name="please_enter_product_desc">Please enter product description</string>
    <string name="please_enter_product_price">Please enter product price</string>
    <string name="add_products">Add Products</string>
    <string name="product_added_successfully">Product added successfully</string>
    <string name="view_products">View Products</string>
    <string name="browse_products">Browse Products</string>
    <string name="my_cart">My Cart</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="max_20_allowed">Maximum 20 items are allowed at a time.</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="product_added_in_cart_successfully">Product added to cart successfully.</string>
    <string name="checkout">Checkout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="are_you_sure_checkout">Are you sure you want to checkout?</string>
    <string name="order_history">Order History</string>
    <string name="dispatch_orders">Dispatch Orders</string>
    <string name="dispatch_order">Dispatch Order</string>
    <string name="are_you_sure_dispatch">Are you sure you want to dispatch items in Order #</string>
    <string name="product_discount_optional">Product Discount (Optional)</string>
    <string name="edit_discount">Edit Discount</string>
    <string name="product_discount">Product Discount</string>
    <string name="cancel">Cancel</string>
    <string name="please_enter_discount">Please enter discount</string>
    <string name="password_must_be_four_chars_long">Password must be 4 characters long</string>
    <string name="delete_item">Delete Item</string>
    <string name="are_you_sure_remove_cart_item">Are you sure you want to remove this item?</string>
    <string name="please_wait">Please wait...</string>
    <string name="location_setting_is_required">App needs to turn on your location settings for better delivery of the products. Kindly Tap \'OK\' to continue.</string>
    <string name="location_permission_required">App needs to access your current location for better delivery of the products. Kindly Tap \'Allow\' to grant permission.</string>
    <string name="show_location">Show Location</string>
    <string name="sales">Sales</string>
    <string name="select_date">Select Date</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="select_account_type">Select Account Type</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total:</string>
    <string name="order_number">Order Number:</string>
    <string name="amount">Amount:</string>
    <string name="delivery_date">Delivery Date:</string>
    <string name="dispatched">Dispatched:</string>
    <string name="vendor_with_colon">Vendor:</string>
    <string name="add_product">Add Product</string>
    <string name="my_products">My Products</string>
    <string name="customer_name">Customer Name:</string>
    <string name="total_amount">Total Amount:</string>
    <string name="products_quantity">Products Quantity:</string>
    <string name="day_end_sale">Day End Sale</string>
    <string name="total_orders_received">Total Orders Received</string>
    <string name="no_products_found">No Products Found</string>
    <string name="no_orders_found">No Orders Found</string>
    <string name="no_sales_found">No Sales Found</string>
    <string name="add_dummy_text">Add Dummy Text</string>

    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="add_dummy_description">Add Dummy Description</string>
    <string name="useful_resource">Useful Resources</string>
    <string name="add_link">Add Link</string>
    <string name="add_pdf">Add PDF</string>
    <string name="long_press_and_paste">Long press here and then \'Paste\'</string>
    <string name="please_enter_link">Please enter a link</string>
    <string name="resource_added_successfully">Resource added successfully</string>
    <string name="no_resources_found">No Resources Found</string>
    <string name="not_a_valid_link">Not a valid link</string>
    <string name="please_enter_link_name">Please enter link name</string>
    <string name="link_name">Link Name</string>
    <string name="file_not_found_in_local_storage">FIle not found in local storage.</string>
</resources>
