<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_box_background"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTitle"
        android:text="@string/alert"
        android:textColor="@color/dark_gradient_color_1"
        android:textSize="@dimen/dialog_box_title_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/titilliu_web_semi_bold"
        />

    <EditText
        android:id="@+id/edtLinkName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:textSize="@dimen/edt_add_product_text_size"
        android:hint="@string/link_name"
        android:maxLength="50"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        />
    <EditText
        android:id="@+id/edtLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:textSize="@dimen/edt_add_product_text_size"
        android:hint="@string/long_press_and_paste"
        android:maxLength="50"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/line_color"
        android:layout_marginTop="20dp"
        >

    </View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:textColor="@color/blue_gradient_color_2"
            android:textSize="@dimen/dialog_box_btn"
            android:id="@+id/txtNo"
            android:layout_weight="200"
            android:gravity="center_vertical|center_horizontal"
            android:fontFamily="@font/titilliu_web_semi_bold"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/line_color"
            android:layout_weight="1">

        </View>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/ok"
            android:textSize="@dimen/dialog_box_btn"
            android:textColor="@color/blue_gradient_color_2"
            android:id="@+id/txtYes"
            android:layout_weight="200"
            android:gravity="center_vertical|center_horizontal"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/titilliu_web_semi_bold"
            />
    </LinearLayout>
</LinearLayout>