<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_orange"
    tools:context=".ui.sign_up.SignUpFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/sign_in_up_parent_margin_left_right"
            android:layout_marginRight="@dimen/sign_in_up_parent_margin_left_right"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_splash_app_name"
                android:fontFamily="@font/titilliu_web_bold"
                android:layout_marginBottom="@dimen/sign_in_up_fields_top_bottom_margin"
                />
            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords"
                android:imeOptions="actionNext"
                android:textSize="@dimen/edt_sign_in_up_text_size"
                android:hint="@string/name"
                android:maxLength="35"
                style="@style/EditTextSignInUp"
                android:layout_marginBottom="@dimen/edt_sign_in_up_bottom_margin"
                />
            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:textSize="@dimen/edt_sign_in_up_text_size"
                android:hint="@string/email"
                android:maxLength="35"
                style="@style/EditTextSignInUp"
                android:layout_marginBottom="@dimen/edt_sign_in_up_bottom_margin"
                />
            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:textSize="@dimen/edt_sign_in_up_text_size"
                android:hint="@string/password"
                android:maxLength="25"
                style="@style/EditTextSignInUp"
                android:layout_marginBottom="@dimen/edt_sign_in_up_bottom_margin"
                />
            <EditText
                android:id="@+id/edtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:textSize="@dimen/edt_sign_in_up_text_size"
                android:hint="@string/confirm_password"
                android:maxLength="25"
                style="@style/EditTextSignInUp"
                />
            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="@dimen/btn_sign_in_up_width"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="@dimen/btn_sign_in_up_text_size"
                android:background="@drawable/bg_sign_in_up_btn"
                android:fontFamily="@font/titilliu_web_semi_bold"
                android:layout_marginTop="@dimen/sign_in_up_fields_top_bottom_margin"
                android:layout_marginBottom="10dp"
                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>













