<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sign_up.SignUpFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/sign_in_up_parent_margin_left_right"
            android:layout_marginRight="@dimen/sign_in_up_parent_margin_left_right"
            >
            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:textSize="@dimen/edt_sign_in_up_text_size"
                android:hint="@string/email"
                android:maxLength="35"
                style="@style/EditTextSignInUp"
                android:layout_marginBottom="@dimen/edt_sign_in_up_bottom_margin"
                />
            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:textSize="@dimen/edt_sign_in_up_text_size"
                android:hint="@string/password"
                android:maxLength="25"
                style="@style/EditTextSignInUp"
                android:layout_marginBottom="@dimen/edt_sign_in_up_bottom_margin"
                />
            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textSize="@dimen/btn_sign_in_up_text_size"
                android:fontFamily="@font/futura_semi_bold_1"
                />
            <TextView
                android:id="@+id/txtSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account"
                android:textSize="@dimen/txt_dont_have_account_size"
                android:layout_margin="12dp"
                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>













