<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_box_background"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTitle"
        android:text="@string/alert"
        android:textColor="@color/dark_gradient_color_1"
        android:textSize="@dimen/dialog_box_title_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/titilliu_web_semi_bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtMessage"
        android:text="@string/message"
        android:textColor="@color/dark_gradient_color_2"
        android:textSize="@dimen/dialog_box_desc_text"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="5sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/line_color"
        android:layout_marginTop="20dp">

    </View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:id="@+id/linearBox">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textSize="@dimen/dialog_box_btn"
            android:textColor="@color/blue_gradient_color_1"
            android:gravity="center_horizontal|center_vertical"
            android:fontFamily="@font/titilliu_web_semi_bold"
            />
    </LinearLayout>



</LinearLayout>