<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:background="@color/white"
    android:orientation="horizontal"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical"
        android:padding="8dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:textSize="@dimen/txt_list_item_order_history_value_size"
                android:textColor="@color/grey_dark_sign_in_up_edt_hint"
                android:text="@string/order_number"
                android:fontFamily="@font/titilliu_web_semi_bold"
                android:layout_marginRight="4dp"
                />
            <TextView
                android:id="@+id/txtOrderId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="@dimen/txt_list_item_order_history_value_size"
                android:textColor="@color/grey_dark_sign_in_up_edt_hint"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:textSize="@dimen/txt_list_item_order_history_value_size"
                android:textColor="@color/grey_dark_sign_in_up_edt_hint"
                android:text="@string/customer_name"
                android:fontFamily="@font/titilliu_web_semi_bold"
                android:layout_marginRight="4dp"
                />
            <TextView
                android:id="@+id/txtCustomerName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="@dimen/txt_list_item_order_history_value_size"
                android:textColor="@color/grey_dark_sign_in_up_edt_hint"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:textSize="@dimen/txt_list_item_order_history_value_size"
                android:textColor="@color/grey_dark_sign_in_up_edt_hint"
                android:text="@string/total_amount"
                android:fontFamily="@font/titilliu_web_semi_bold"
                android:layout_marginRight="4dp"
                />
            <TextView
                android:id="@+id/txtTotalAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="@dimen/txt_list_item_order_history_value_size"
                android:textColor="@color/grey_dark_sign_in_up_edt_hint"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:textSize="@dimen/txt_list_item_order_history_value_size"
                android:textColor="@color/grey_dark_sign_in_up_edt_hint"
                android:text="@string/delivery_date"
                android:fontFamily="@font/titilliu_web_semi_bold"
                android:layout_marginRight="4dp"
                />
            <TextView
                android:id="@+id/txtDeliveryDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="@dimen/txt_list_item_order_history_value_size"
                android:textColor="@color/grey_dark_sign_in_up_edt_hint"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_vertical"
        >
        <TextView
            android:id="@+id/txtDispatchOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dispatch_order"
            android:textColor="@color/blue_gradient_color_1"
            android:textSize="@dimen/txt_edit_discount_size"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:fontFamily="@font/titilliu_web_semi_bold"
            android:padding="6dp"
            android:layout_marginBottom="12dp"
            />
        <TextView
            android:id="@+id/txtShowLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_location"
            android:textColor="@color/blue_gradient_color_1"
            android:textSize="@dimen/txt_edit_discount_size"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:fontFamily="@font/titilliu_web_semi_bold"
            android:padding="6dp"
            />
    </LinearLayout>
</LinearLayout>










